--- a/test/runtime/Cargo.toml
+++ b/test/runtime/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-runtime = { package = "cumulus-runtime", path = "../../runtime", default-features = false }
+cumulus-runtime = { git = "https://github.com/paritytech/cumulus", tag = "rococo_v1", default-features = false }
 substrate-test-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", version = "2.0.0-rc5" }
 
 [build-dependencies]
@@ -15,6 +15,6 @@ wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = " 1
 [features]
 default = ["std"]
 std = [
-	"runtime/std",
+	"cumulus-runtime/std",
 	"substrate-test-runtime/std",
 ]
