--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-	"test/parachain/runtime",
-	"test/parachain/",
+	"parachain/runtime",
+	"parachain/",
 ]
 
 [profile.release]
